# wa-cite-check

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
docs/: build_demo_svg.py
examples/: sample_motion.txt
src/wacite/: __init__.py  cli.py  models.py  normalize.py
src/wacite/align/: __init__.py  corpus.py  judge.py
src/wacite/check/: __init__.py  audit.py  report.py
src/wacite/index/: __init__.py  build.py  store.py
src/wacite/parse/: __init__.py  citations.py  document.py  shortform.py
tests/: conftest.py  test_align.py  test_audit.py  test_e2e.py  test_parse.py
