[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wa-cite-check"
version = "0.1.0"
description = "Standalone Washington legal citation checker (format/accuracy audit) over the wa-legal-ai corpus"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "python-docx>=1.1",
    "pdfplumber>=0.11",
]

[project.optional-dependencies]
# Only needed to (re)build the SQLite index from the live wa-legal-ai Postgres corpus.
build = ["psycopg[binary]>=3.1"]
# Phase-2 substantive alignment. Reads corpus text at check time and runs an LLM
# judge. Also requires the wa-legal-ai package itself, installed editable from the
# sibling checkout: `pip install -e ../wa-legal-ai`.
align = [
    "psycopg[binary]>=3.1",        # live corpus access at check time
    "sentence-transformers>=3.0",  # embed propositions to rank passages
    "httpx>=0.27",                 # Ollama transport (local judge)
    "anthropic>=0.40",             # Claude provider (optional at runtime)
]
dev = ["pytest>=8.0"]

[project.scripts]
wacite = "wacite.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/wacite"]

[tool.pytest.ini_options]
testpaths = ["tests"]
